First sketch up

--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,85 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: BuildWithAI+ Boilerplate
+description: "A comprehensive mobile app starter kit for React Native & Expo"
 ---
 
 <img
   className="block dark:hidden"
   src="/images/hero-light.png"
-  alt="Hero Light"
+  alt="BuildWithAI+ Boilerplate"
 />
 <img
   className="hidden dark:block"
   src="/images/hero-dark.png"
-  alt="Hero Dark"
+  alt="BuildWithAI+ Boilerplate"
 />
 
-## Setting up
+## Welcome to BuildWithAI+ Boilerplate
 
-The first step to world-class documentation is setting up your editing environments.
+BuildWithAI+ is a production-ready starter kit for building mobile applications with React Native and Expo. It includes everything you need to get started quickly while maintaining best practices and a scalable architecture.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
+    title="What's Included"
+    icon="box-open"
+    href="/introduction/whats-included"
   >
-    Get your docs set up locally for easy development
+    Explore all the features and integrations available out of the box
   </Card>
   <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
+    title="Quick Start Guide"
+    icon="rocket"
+    href="/quickstart/project-setup"
   >
-    Preview your changes before you push to make sure they're perfect
+    Get up and running with your first mobile app in minutes
   </Card>
 </CardGroup>
 
-## Make it yours
+## Key Features
 
-Update your docs to your brand and add valuable content for the best user conversion.
+BuildWithAI+ provides a complete mobile app foundation with production-ready integrations.
 
-<CardGroup cols={2}>
+<CardGroup cols={3}>
   <Card
-    title="Customize Style"
+    title="Authentication"
+    icon="lock"
+    href="/features/auth/supabase-setup"
+  >
+    Complete auth flows with Supabase including social login
+  </Card>
+  <Card
+    title="Push Notifications"
+    icon="bell"
+    href="/features/push/setup"
+  >
+    Pre-configured push notifications for iOS and Android
+  </Card>
+  <Card
+    title="In-App Purchases"
+    icon="credit-card"
+    href="/features/iap/setup"
+  >
+    Monetization with RevenueCat and Superwall integration
+  </Card>
+  <Card
+    title="Analytics"
+    icon="chart-line"
+    href="/features/analytics/posthog-setup"
+  >
+    Track user behavior with PostHog analytics
+  </Card>
+  <Card
+    title="Modern UI"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    href="/development/ui/nativewind"
   >
-    Customize your docs to your company's colors and brands
+    Beautiful UIs with NativeWind (TailwindCSS for React Native)
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="File-Based Routing"
+    icon="route"
+    href="/development/routing/setup"
   >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
+    Intuitive navigation with Expo Router
   </Card>
 </CardGroup>
